LDEV-3424 * order lessons alphabetically on LAMS monitor link's page; * fix JS exception on LAMS monitor link's page: it happened due to the conflict between jQuery and Prototype, due to this jQuery library was customized and it will be required to move this customization to later versions of the library

--- a/lams_bb_integration/RELEASE_NOTES.TXT
+++ b/lams_bb_integration/RELEASE_NOTES.TXT
@@ -68,3 +68,9 @@ https://bugs.lamsfoundation.org/browse/<bug reference>
 1.2.7 Release Fixes
 ===================
 * LDEV-3402: Add "your progress" widget to the lesson page
+
+1.2.8 Release Fixes
+===================
+* LDEV-3423: Fixed Exception on getting mark from LAMS server after lesson is completed
+* LDEV-3424: Add new feature to integrations to be able to sync all marks in the lesson
+
