--- a/lams_bb_integration/RELEASE_NOTES.TXT
+++ b/lams_bb_integration/RELEASE_NOTES.TXT
@@ -78,3 +78,6 @@ https://bugs.lamsfoundation.org/browse/<bug reference>
 ===================
 * LDEV-3446: Join users to the lesson after it was created on a BB side
 
+1.2.10 Release Fixes
+===================
+* LDEV-3473: Start supporting "Course builder" user role
