--- a/lams_bb_integration/RELEASE_NOTES.TXT
+++ b/lams_bb_integration/RELEASE_NOTES.TXT
@@ -95,3 +95,8 @@ Also supports calls to the LAMS server to use a dummy course to suit the templat
 * LDEV-3513: Transform lineitemId parameter stored in some older versions to the format required now
 * LDEV-3510: LAMS Lessons always appear at the top of the content list - should able to be moved further down the list.
 * LDEV-3521: Supporting an alternative URL for LAMS where needed for mixed https/http integrations.
+
+1.2.13 Release Fixes
+====================
+* LDEV-3526: Switch webservice calls to POST.
+* LDEV-3456: Adding support for a type field to categorise designs.
