--- a/lams_bb_integration/RELEASE_NOTES.TXT
+++ b/lams_bb_integration/RELEASE_NOTES.TXT
@@ -100,3 +100,7 @@ Also supports calls to the LAMS server to use a dummy course to suit the templat
 ====================
 * LDEV-3526: Switch webservice calls to POST.
 * LDEV-3456: Adding support for a type field to categorise designs.
+
+1.2.14 Release Fixes
+====================
+* LDEV-3526: Adding further POST support.
