--- a/lams_bb_integration/RELEASE_NOTES.TXT
+++ b/lams_bb_integration/RELEASE_NOTES.TXT
@@ -122,3 +122,4 @@ Now reverted back to previous behaviour with lesson loading in the same tab.
 * LDEV-3399: Support Course Copy feature in Blackboard
 * LDEV-3704: Ability to modify BB lessons' URL host name
 * LDEV-3881: Increase popup size (to 1280x720)
+* LDEV-3880: Notification ON by default with Blackboard integration
