LDEV-3905: Fixed exception that was thrown on trying to start a lesson while folder selected

--- a/lams_bb_integration/RELEASE_NOTES.TXT
+++ b/lams_bb_integration/RELEASE_NOTES.TXT
@@ -128,3 +128,4 @@ Now reverted back to previous behaviour with lesson loading in the same tab.
 ====================
 * LDEV-3399: Course Copy feature. Remove auxiliary building block and introduce special button to update LAMS links with new lesson ids.
 * LDEV-3897: Ability to fix LAMS lessons in imported courses
+* LDEV-3905: Fixed exception that was thrown on trying to start a lesson while folder selected
