LDEV-3978: Add labels.

--- a/lams_monitoring/conf/language/lams/ApplicationResources.properties
+++ b/lams_monitoring/conf/language/lams/ApplicationResources.properties
@@ -273,9 +273,9 @@ button.journal.entries.tooltip  =View all Journal Entries saved by Learners
 tab.lesson  =Lesson
 tab.sequence  =Sequence
 tab.learners  =Learners
-force.complete.click  =Click on an activity to move learner "[0]" or outside any activity to cancel.
-force.complete.end.lesson.confirm  =Are you sure you want to move learner "[0]" to the end of lesson?
-force.complete.activity.confirm  =Are you sure you want to move learner "[0]" to activity "[1]"?
+force.complete.click  =Click on an activity to move learners or outside any activity to cancel.
+force.complete.end.lesson.confirm  =Are you sure you want to move [0] to the end of lesson?
+force.complete.activity.confirm  =Are you sure you want to move [0] to activity "[1]"?
 force.complete.drop.fail  =You have dropped the learner "[0]" on either its current or on its completed activity "[1]".
 force.complete.end.lesson.tooltip  =To move a learner to the end of lesson, drag the learner icon over to this bar.
 learner.group.list.title  =Learners:
@@ -284,6 +284,7 @@ learner.group.show  =Double-click to see the full list.
 learner.finished.count  =Finished Learners: [0] of [1]
 learner.finished.dialog.title  =End of lesson
 learner.group.sort.button  =Sort
+learner.group.multi.select =(ctrl+click to select multiple learners)
 button.force.complete  =Move learner to...
 button.view.learner  =View learner
 button.close  =Close
@@ -301,12 +302,12 @@ lesson.copy.prompt  =(now press Ctrl+C to copy to clipboard)
 learner.group.select.all  =Select/Unselect all
 email.notifications.problems.sending.emails  =Some problems occurred while sending emails. Please, contact your system administrator.
 learner.group.remove.progress  =You are about to remove student(s) from a lesson. The student(s) will not have access to this lesson any longer. Do you also want to remove the student(s) progress?
-force.complete.remove.content  =You are moving learner "[0]" to activity "[1]". You can opt to delete the content of activities that have been previously done, so the learner has to enter the content/answers again.
+force.complete.remove.content  =You are moving [0] to activity "[1]". You can opt to delete the content of activities that have been previously done, so the learner has to enter the content/answers again.
 force.complete.remove.content.yes  =Delete content
 force.complete.remove.content.no  =Keep content
 label.schedule.gate.activity.completion.based  =This gate is based on each learner's previous activity completion time
-audit.force.complete  =Attempted to force complete learner {0} to activityId:{1}. LessonId:{2}.
-audit.force.complete.end.lesson  =Attempted to force complete learner {0} to the end of the lesson. LessonId:{2}.
+audit.force.complete  =Attempted to force complete learners {0} to activityID: {1}. LessonID: {2}.
+audit.force.complete.end.lesson  =Attempted to force complete learners {0} to the end of the lesson. LessonID: {2}.
 lesson.task.content.edited  =Content being edited
 lesson.task.attention  =This activity requires attention
 lesson.task.define.later  =Define Later
