LDEV-3982: Prevent complex outputs from being used as branching conditions. Remove complex outputs from suggestions when creating branching conditions. Fix labels.

--- a/lams_tool_chat/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_chat/conf/language/lams/ApplicationResources.properties
@@ -122,7 +122,8 @@ authoring.info.teacher.set.restriction  =For this activity, the instructor fixed
 monitor.summary.notification  =Notification
 monitor.summary.date.restriction.set  =Deadline has been set
 monitor.summary.date.restriction.removed  =Deadline has been removed
-output.desc.all.users.messages.output.definition.chat  =Each learner's messages sent in the Chat
+output.desc.all.users.messages.output.definition.chat  =All learners' messages sent in the Chat
+output.desc.user.messages.output.definition.chat =Current learner's messages sent in the Chat
 button.submit  =Finish
 label.reflections  =Reflections
 label.chat.options  =Chat options
