LDEV-3669:Fix for Wiki date/time restriction in monitor.

--- a/lams_tool_wiki/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_wiki/conf/language/lams/ApplicationResources.properties
@@ -131,6 +131,15 @@ monitor.th.sessions  =Wiki Sessions
 monitor.th.numlearners  =Number of Learners
 monitor.summary.td.addNotebook  =Add a notebook at end of Wiki
 monitor.summary.td.notebookInstructions  =Notebook instructions
+monitor.summary.date.restriction  =Deadline
+monitor.summary.when.date.restriction.is.set  =Learners will not be able to use the Wiki after the set date and time.
+monitor.summary.after.date  =Date/time:
+monitor.summary.set.restriction  =Set restriction
+monitor.summary.unset.restriction  =Remove restriction
+authoring.info.teacher.set.restriction  =For this activity, the instructor fixed a deadline until {0}. After this time this activity will not be available.
+monitor.summary.notification  =Notification
+monitor.summary.date.restriction.set  =Deadline has been set
+monitor.summary.date.restriction.removed  =Deadline has been removed
 monitor.nosessions  =There are no sessions running yet for this Wiki.
 monitor.notebooks  =Notebook Reflections
 output.learner.number.of.edits  =Number of page edits
