LDEV-3662: Add sysadmin interface to delete preview lessons.

--- a/lams_admin/conf/language/lams/ApplicationResources.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources.properties
@@ -164,6 +164,7 @@ sysadmin.login.text  =Update the text under the logo on the login page:
 sysadmin.headline  =System Administration
 sysadmin.config.settings.edit  =Edit configuration settings
 sysadmin.batch.temp.file.delete  =Delete old temporary files
+sysadmin.batch.preview.lesson.delete =Delete old preview lessons
 sysadmin.job.list  =Job list
 sysadmin.list.job  =List scheduled jobs in Quartz queue
 sysadmin.register.server  =Register server
@@ -228,6 +229,10 @@ msg.importv1.created  =Created {0} users and {1} courses.
 msg.importv1.already.exist  =The following logins already exist
 msg.cleanup.files.deleted  ={0} files were deleted.
 msg.cleanup.warning  =Warning: calculating the size of LAMS' temporary files may incur a performance hit on your server if it hasn't been cleaned out for a while.
+msg.cleanup.preview.lesson.confirm =Are you sure you want to delete all preview lessons?
+msg.cleanup.preview.lesson.error =Error while deleting preview lessons
+label.cleanup.preview.lesson.count =Number of preview/all lessons:
+label.cleanup.preview.lesson.progress =Deleting...
 label.exported.learning.designs  =exported learning designs
 label.imported.learning.designs  =imported learning designs
 label.unknown  =unknown
