--- a/lams_admin/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources_en_AU.properties
@@ -1,9 +1,6 @@
 appName = admin 
 #language code: en 
 #locale code: AU 
-
-
- 
 #=================== labels for LAMS Administration =================# 
 
 audit.organisation.change  =Changed {0} for organisation: {1} from: {2} to: {3}
@@ -521,7 +518,13 @@ tool.groups.group.name.error  =A group name can not be blank
 tool.groups.save.error  =Error while saving groups
 config.live.edit  =Enable live edit
 config.export.portfolio  =Enable export portfolio
-
 sysadmin.extGroupsUrl  =External groups URL
+
+label.create.lesson  =Create new lesson
+label.manage.tool.consumers  =Maintain LTI Tool Consumers
+label.edit.tool.consumer  =Edit tool consumer details
+label.add.tool.consumer  =Add new tool consumer
+sysadmin.serversecret  =Secret
+label.tool.consumers.count  =LTI Tool Consumers(s) in total
 
 #======= End labels: Exported 515 labels for en AU =====
