LDEV-3997 LAMS to become LTI compliant tool provider (version 1.1)

--- a/lams_central/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_central/conf/language/lams/ApplicationResources_en_AU.properties
@@ -1,8 +1,6 @@
 appName = lams_central 
 #language code: en 
-#locale code: AU 
-
-
+#locale code: AU
  
 #=================== labels for LAMS Central =================# 
 
@@ -671,4 +669,18 @@ label.newest.first=Newest First
 label.top.comments=Top Comments
 label.add.sticky=Stick To Top
 label.remove.sticky=Remove Sticky 
+
+label.organisations  =Select course with the lessons that needs to be export
+label.lesson.id  =Lesson ID
+label.display.design.image =Display sequence image?
+label.select.sequence  =You must select a sequence before proceeding
+label.choose.sequence  =Choose Lams sequence
+label.author.sequence  =Author new LAMS lessons
+label.open.monitor  =Open Monitor
+label.your.progress  =Your Lesson Progress
+label.you.completed.this.lesson  =You have completed this lesson.
+label.total.activities.depend.on.path  =Total activities depend on your learning path.
+label.lesson.not.completed  =Lesson is not yet completed.
+label.you.completed.activities  =You have completed {0} activities
+
 #======= End labels: Exported 439 labels for en AU =====
