--- a/lams_tool_assessment/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_assessment/conf/language/lams/ApplicationResources.properties
@@ -299,6 +299,8 @@ label.question.options  =Question options
 label.activity.completion  =End of activity
 label.notifications  =Notifications
 label.ask.for.hedging.justification  =Ask for hedging justification?
+label.required.field=Field is required
+label.answer.required=Answer is required
 
 
 #======= End labels: Exported 291 labels for en AU =====
