--- a/lams_admin/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources_en_AU.properties
@@ -522,5 +522,11 @@ tool.groups.save.error  =Error while saving groups
 config.live.edit  =Enable live edit
 config.export.portfolio  =Enable export portfolio
 
+label.create.lesson  =Create new lesson
+label.manage.tool.consumers  =Maintain LTI Tool Consumers
+label.edit.tool.consumer  =Edit tool consumer details
+label.add.tool.consumer  =Add new tool consumer
+sysadmin.serversecret  =Secret
+label.tool.consumers.count  =LTI Tool Consumers(s) in total
 
 #======= End labels: Exported 515 labels for en AU =====
