LDEV-3997 LAMS to become LTI compliant tool provider (version 1.1)

--- a/lams_central/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_central/conf/language/lams/ApplicationResources_en_AU.properties
@@ -674,4 +674,19 @@ error.verification.code  =Sorry, entered verification code is incorrect. Please 
 label.your.new.shared.secret  =Your new shared secret: {0}
 label.2FA.shared.secret  =Two-factor authorization shared secret
 
+label.create.lesson  =Create Lesson
+label.organisations  =Select course with the lessons that needs to be export
+label.lesson.id  =Lesson ID
+label.display.design.image =Display sequence image?
+label.select.sequence  =You must select a sequence before proceeding
+label.choose.sequence  =Choose Lams sequence
+label.author.sequence  =Author new LAMS lessons
+label.open.monitor  =Open Monitor
+label.your.progress  =Your Lesson Progress
+label.you.completed.this.lesson  =You have completed this lesson.
+label.total.activities.depend.on.path  =Total activities depend on your learning path.
+label.lesson.not.completed  =Lesson is not yet completed.
+label.you.completed.activities  =You have completed {0} activities
+
+
 #======= End labels: Exported 439 labels for en AU =====
