LDEV-3993:New chat output: number of posts

--- a/lams_tool_chat/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_chat/conf/language/lams/ApplicationResources.properties
@@ -106,6 +106,7 @@ label.authoring.edit  =Edit
 error.condition.name.blank  =Condition name can not be blank.
 error.condition.duplicated.name  =Duplicated name. Please choose unique one.
 error.condition  =Error creating condition.
+output.desc.learner.number.of.posts  =Learner's number of postings in the Chat
 output.desc.text.search.output.definition.chat  =Messages contain certain words
 text.search.output.definition.chat.default.condition  =Messages contain word "LAMS"
 textsearch.heading  =Messages that...
