LDEV-3961: adding label for site name

--- a/lams_admin/conf/language/lams/ApplicationResources.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources.properties
@@ -521,5 +521,6 @@ sysadmin.extGroupsUrl  =External groups URL
 server.config.title  =Server Configuration
 server.monitor.title  =Server Monitoring
 user.course.title=User and Course Configuration
+config.site.name =Site name
 
 #======= End labels: Exported 515 labels for en AU =====
