LDEV-3965: login panel label

--- a/lams_central/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_central/conf/language/lams/ApplicationResources_en_AU.properties
@@ -672,7 +672,8 @@ label.private.notifications.read.all.hint =Mark all notifications as read
 label.verification.code  =Verification code
 error.verification.code  =Sorry, entered verification code is incorrect. Please try again.
 label.your.new.shared.secret  =Your new shared secret: {0}
-label.2FA.shared.secret  =Two-factor authorization shared secret
+label.2FA.shared.secret  =Two-factor authentication shared secret
+label.2FA.login.panel =Two-factor authentication required
 
 label.create.lesson  =Create Lesson
 label.organisations  =Select course with the lessons that needs to be export
