LDEV-3767: Adding two new methods for Peer Review. Authoring and learning changes completed.

--- a/lams_tool_preview/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_preview/conf/language/lams/ApplicationResources_en_AU.properties
@@ -67,14 +67,14 @@ label.rate.limits.topic.reminder  =You have rated {0} users already.
 label.rate.limits.reminder.min = You must rate at least {0} users.
 label.rate.limits.reminder.max = You can only rate up to {0} users.
 js.warning.max.min.limit = There is an error with the minimum and/or maximum set for ratings. Please check and try again. 
-label.minimum  =Minimum:
-label.maximum  =Maximum:
+label.minimum  =Minimum Number of Ratings:
+label.maximum  =Maximum Number of Ratings:
 label.no.minimum  =No minimum
 label.no.maximum  =No maximum
 label.minimum.number.words  =Minimum number of words in a comment {0}
 warning.minimum.number.words  =There is a minimum required number of words in a comment is {0}. You have entered {1} word(s).
 label.comment.textarea.tip  =Type your comment here then click on the green tick.
-label.max.number.marks.each.user  =Max number of reviews per user
+label.max.number.marks.each.user  =Max number of reviews per user (applies only to Star Ratings)
 label.move.up  =Move Up
 label.move.down  =Move Down
 label.allow.comments  =Allow learners to comment on other learners
@@ -93,3 +93,31 @@ warning.comment.blank=Comment text is missing.
 creating.users.message  =Please wait while the learners\' details are set up ready for you to review their responses.
 error.max.ratings.per.user=Unable to save the review - the maximum number of ratings may have been reached. The page will now be refreshed.
 export.tool.export.not.supported=This tool does not support export portfolio.
+label.rating.rank=Rank
+label.rating.style.star=Star Rating
+label.rating.style.ranking=Ranking
+label.rating.style.hedging=Hedging
+label.rating.all=ALL
+label.rating.author.justify=Ask for hedging justification?
+label.rating.learner.hedge.assign.marks=Assign marks to answers. Max possible mark: 10
+label.rating.learner.justify=Please, justify your mark allocation.
+label.rating.max.hedge=Total Hedge Mark
+error.rating.hedge.total.add.up=Marks for criteria {0} must add up to {1}
+error.rating.rank.all=You must rank all the learners for criteria {0}
+label.justify.hedging.marks=Justify your mark allocation.
+label.assign.marks=Assign up to {0} marks altogether, sharing marks across learners. Current total: {1}.
+error.assign.marks=The marks must add up to {0}. 
+label.assign.ranks=Fill the boxes with the top {0} entries, by dragging the learners' name onto the box.
+error.assign.ranks=You must complete all {0} boxes. 
+label.assign.rankAll=Order the learners in ranking order, from first to last, by dragging learners from the right hand column to the left column. Dragging a name on top of another will put the new name first. All learners must be ranked. 
+error.assign.rankAll=All learners must be ranked. 
+label.ranked=Ranked
+label.unranked=Unranked
+label.addlearnerhere=Add learner here....
+label.alllearnersadded=All learners added
+label.next=Next
+label.previous=Previous
+label.step=Step {0} of {1}
+label.mark=Mark
+label.rank=Rank
+label.authoring.self.review=Allow Self Review
