LDEV-3767: Adding two new methods for Peer Review. Monitoring first cut completed.

--- a/lams_tool_preview/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_preview/conf/language/lams/ApplicationResources_en_AU.properties
@@ -121,3 +121,12 @@ label.step=Step {0} of {1}
 label.mark=Mark
 label.rank=Rank
 label.authoring.self.review=Allow Self Review
+label.monitoring.num.of.comments={0} Comments
+label.monitoring.instructions.rank.all.learners=Learners needed to rank ALL the learners.
+label.monitoring.instructions.rank.some.learners=Learners needed to rank {0} learners.
+label.monitoring.instructions.assign.some.marks=Learners needed to assign {0} marks altogether.
+label.learning.your.rankings.shown.in.brackets=(Your rankings shown in brackets after name)
+label.learning.your.marks.shown.in.brackets=(Your marks shown in brackets after name)
+label.learning.average.rankings=Average Rankings:
+label.learning.average.marks=Average Marks:
+label.learning.your.justification=Your justification:
