LDEV-4013: Label missing, which cause the user's comments to not be displayed correctly in monitoring.

--- a/lams_tool_images/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_images/conf/language/lams/ApplicationResources.properties
@@ -168,6 +168,6 @@ label.learning.delete.image  =Delete image
 label.submit  =Finish
 label.image.options=Image Options
 label.activity.completion=End of Activity
-
+label.posted.by  ={0} on {1}
 
 #======= End labels: Exported 161 labels for en AU =====
