--- a/lams_tool_images/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_images/conf/language/lams/ApplicationResources_en_AU.properties
@@ -184,5 +184,5 @@ label.no.maximum  =No maximum
 label.minimum.number.words  =Minimum number of words in a comment {0}
 warning.minimum.number.words  =There is a minimum required number of words in a comment: {0}. So far you've entered {1} word(s).
 label.comment.textarea.tip  =Please, provide some comment here...
-
+label.posted.by  ={0} on {1}
 #======= End labels: Exported 161 labels for en AU =====
