LDEV-3806: Moved reflections to a separate page, with the reflections for a single session shown. Added some simple statistics - number of users in a session and number of users completed in a session.

--- a/lams_tool_preview/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_preview/conf/language/lams/ApplicationResources_en_AU.properties
@@ -130,3 +130,7 @@ label.learning.your.marks.shown.in.brackets=(Your marks shown in brackets after 
 label.learning.average.rankings=Average Rankings:
 label.learning.average.marks=Average Marks:
 label.learning.your.justification=Your justification:
+label.monitoring.number.learners=Number of learners
+label.monitoring.number.learners.finished=Number of learners finished
+label.monitoring.view=View {0}
+label.close=Close
