LDEV-4014, LKC-65: Use buttons instead of checkboxes for Presence & IM in Lesson tab in Monitoring. Bootstrap LKC custom buttons.

--- a/lams_monitoring/conf/language/lams/ApplicationResources.properties
+++ b/lams_monitoring/conf/language/lams/ApplicationResources.properties
@@ -218,11 +218,11 @@ button.schedule  =Schedule
 button.schedule.tooltip  =Schedule lesson to start in a future time
 button.start.now  =Start Now
 button.start.now.tooltip  =Start the lesson immediately
-lesson.enable.presence  =Allow learners to see who is online
+lesson.presence =Presence
 lesson.enable.presence.alert  =Now learners can see who is online
 lesson.disable.presence.alert  =Now learners can not see who is online
 lesson.presence.count =users
-lesson.enable.im  =Enable Instant Messaging
+lesson.im =Instant Messaging
 lesson.enable.im.alert  =Instant Messaging is now enabled
 lesson.disable.im.alert  =Instant Messaging is now disabled
 lesson.required.tasks  =Required tasks
