LDEV-2975: updating translations

--- a/lams_tool_sbmt/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_sbmt/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = submitfiles
 #language code: en 
 #locale code: AU 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Fri Oct 21 20:03:05 CST 2016 
  
 #=================== labels for Submit Files =================# 
 
@@ -28,13 +28,13 @@ label.authoring.cancel.button  =Cancel
 label.authoring.online.filelist  =Online file list
 label.authoring.offline.filelist  =Offline file list
 authoring.exception  =There is a problem submitting content, the reason is {0}
-label.learner.fileName  =File Name
+label.learner.fileName  =Name
 label.learner.filePath  =File
-label.learner.fileDescription  =File Description
-label.learner.upload  =Upload File
-label.learner.finished  =Finished Uploading
-label.learner.time  =Time Uploaded
-label.learner.dateOfSubmission  =Date of Submission
+label.learner.fileDescription  =Description
+label.learner.upload  =Upload
+label.learner.finished  =Finished uploading
+label.learner.time  =Uploaded on
+label.learner.dateOfSubmission  =Submission date
 label.learner.comments  =Comments
 label.learner.marks  =Marks
 label.learner.dateMarksReleased  =Date Marks Released
@@ -53,19 +53,19 @@ label.monitoring.heading.stats  =Statistics
 label.monitoring.heading.stats.desc  =Statistics description
 label.monitoring.heading.marking  =Marking
 label.monitoring.heading.marking.desc  =Marking description
-page.title.mark1.userlist  =Report Marking
+page.title.mark1.userlist  =Report marking
 label.monitoring.needMarking  =File(s) need marking
 label.monitoring.done.button  =Close
-label.monitoring.viewAllMarks.button  =View All Marks
+label.monitoring.viewAllMarks.button  =View all marks
 label.monitoring.Mark.button  =Mark
 label.monitoring.releaseMarks.button  =Release Marks
 label.monitoring.downloadMarks.button  =Download Marks
-label.monitoring.updateMarks.button  =Update Marks
-label.monitoring.saveMarks.button  =Save Marks
+label.monitoring.updateMarks.button  =Update marks
+label.monitoring.saveMarks.button  =Save
 label.monitoring.finishedMarks.button  =Finished
-label.monitoring.edit.activity.edit  =Edit Activity
-label.monitoring.edit.activity.cancel  =Cancel Edit
-label.monitoring.edit.activity.update  =Update Activity
+label.monitoring.edit.activity.edit  =Edit activity
+label.monitoring.edit.activity.cancel  =Cancel
+label.monitoring.edit.activity.update  =Update activity
 monitoring.statistic.title  =Statistic for monitoring
 monitoring.statistic.marked  =Marked files:
 monitoring.statistic.not.marked  =Not marked files:
@@ -147,7 +147,22 @@ monitor.summary.date.restriction.removed  =Deadline has been removed
 monitoring.user.submittedFiles  =Submitted files
 output.desc.submitted.items.output.definition.sbmt  =Files submitted in the Submit Files tool
 button.submit  =Finish
-label.monitoring.file.delete  =Delete
-label.search  =Search...
+label.monitoring.file.delete  =Delete mark file
+label.file.options  =File options
+label.activity.completion  =End of activity
+label.notifications  =Notifications
+label.view.files  =View files
+label.deleted  =Deleted
+label.monitoring.original.learner.file.delete  =Delete
+label.monitoring.original.learner.file.restore  =Restore
+message.monitor.confirm.original.learner.file.delete  =Are you sure you want to delete the original file {0} uploaded by the learner?
+message.monitor.confirm.original.learner.file.restore  =Are you sure you want to restore the original file {0} uploaded by the learner?
+event.file.delete.subject  =LAMS: File was deleted.
+event.file.delete.body  =An instructor deleted your file ''''{0}'''' in a Submit Files activity in LAMS. This message was send automatically, please do not reply to it.
+event.file.restore.subject  =LAMS: File was restored.
+event.file.restore.body  =An instructor restored your file ''''{0}'''' in a Submit Files activity in LAMS. This message was send automatically, please do not reply to it.
+audit.file.delete  =Instructor {0} deleted file {1} uploaded by learner {2}.
+audit.file.restore  =Instructor {0} restored file {1} uploaded by learner {2}.
 
-#======= End labels: Exported 142 labels for en AU =====
+
+#======= End labels: Exported 157 labels for en AU =====
