LDEV-4020: Bootstrap Open/Save/Import dialog in Authoring. Other minor fixes.

--- a/lams_central/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_central/conf/language/lams/ApplicationResources_en_AU.properties
@@ -548,7 +548,7 @@ authoring.fla.groups.to.default.branch.confirm =All remaining groups will be map
 authoring.fla.range.condition.add.start.error =The start value can not be within the range of an existing condition
 authoring.fla.range.condition.add.end.error =The end value can not be within the range of an existing condition
 authoring.fla.group.title.validation.erorr =Group name can not contain any of these characters < > ^ * @ % $
-authoring.fla.page.title =Flashless Authoring
+authoring.fla.page.title =Authoring
 authoring.fla.page.menu.new =New
 authoring.fla.page.menu.open =Open
 authoring.fla.page.menu.import =Import
