LDEV-3767: Monitor can send an email to learners with their reviews.

--- a/lams_tool_preview/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_preview/conf/language/lams/ApplicationResources.properties
@@ -119,7 +119,7 @@ label.previous=Previous
 label.step=Step {0} of {1}
 label.mark=Mark
 label.rank=Rank
-label.authoring.self.review=Allow Self Review
+label.self.review=Allow Self Review
 label.monitoring.num.of.comments={0} Comments
 label.monitoring.instructions.rank.all.learners=Learners needed to rank ALL the learners.
 label.monitoring.instructions.rank.some.learners=Learners needed to rank {0} learners.
@@ -133,3 +133,14 @@ label.monitoring.number.learners=Number of learners
 label.monitoring.number.learners.finished=Number of learners finished
 label.monitoring.view=View {0}
 label.close=Close
+event.sent.results.subject=LAMS: {0} results were released 
+event.sent.results.body=<p>{0}<br/><br/>Your results are:</p><div>{1}</div><p>This message was send automatically, please do not reply to it.</p>
+event.sent.results.criteria.comment=<p><strong>{0}</strong>:<ul>{1}</ul></p>
+event.sent.results.criteria.star=<p><strong>{0}</strong> (Star): {1}</p><UL>{2}</UL>
+event.sent.results.criteria.hedge=<p><strong>{0}</strong> (Mark Hedging): {1} out of {2}</p>
+event.sent.results.criteria.rank=<p><strong>{0}</strong> (Rank): {1} out of {2}</p>
+event.sent.results.criteria.rankAll=<p><strong>{0}</strong> (Rank All): {1}</p>
+event.sent.results.no.results=No results
+msg.results.sent={0} Email(s) Sent
+button.email.results=Email Results
+label.notify.user.of.results=Notify Users of Results
